--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <ion-menu type="overlay" *ngIf="us.isLoggedIn" >
       <ion-header>
         <ion-toolbar>
-          <ion-title>{{us.user?.fname}}</ion-title>
+          <ion-title>{{us.user?.name}}</ion-title>
         </ion-toolbar>
       </ion-header>
       <ion-content>
@@ -13,6 +13,14 @@
               <ion-icon slot="start" [name]="p.icon"></ion-icon>
               <ion-label>
                 {{p.title}}
+              </ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+          <ion-menu-toggle auto-hide="false" *ngFor="let p of jcs.jokeCategories">
+            <ion-item [routerDirection]="'root'" [routerLink]="['home/'+p.name]">
+              <ion-icon slot="start" [name]="'list'"></ion-icon>
+              <ion-label>
+                {{p.name}}
               </ion-label>
             </ion-item>
           </ion-menu-toggle>
