--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -10,5 +10,18 @@
 </ion-header>
 
 <ion-content>
-    <itemlist *ngFor="let item of items" [item]="item"></itemlist>
+    <jokelist *ngFor="let joke of jokes" [joke]="joke"></jokelist>
+    
+    <ion-card *ngIf="jokes?.length == 0">
+      <ion-card-content>
+        No record found, try after some time.
+      </ion-card-content>
+    </ion-card>
+    
+    <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
+      <ion-infinite-scroll-content
+        loadingSpinner="bubbles"
+        loadingText="Loading more data...">
+      </ion-infinite-scroll-content>
+    </ion-infinite-scroll>
 </ion-content>
