--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
           </ion-menu-toggle>
           <ion-menu-toggle auto-hide="false" *ngFor="let p of jcs.jokeCategories">
             <ion-item [routerDirection]="'root'" [routerLink]="['home/'+p.name]">
-              <ion-icon slot="start" [name]="'list'"></ion-icon>
+              <ion-icon slot="start" [name]="'happy'"></ion-icon>
               <ion-label>
                 {{p.name}}
               </ion-label>
