--- a/src/app/pages/intro/intro.page.html
+++ b/src/app/pages/intro/intro.page.html
@@ -1,17 +1,7 @@
 <ion-content fullscreen class="tutorial-page">
   <ion-slides pager="true">
-    <ion-slide
-      *ngFor="let slide of slides"
-      [ngStyle]="{ 'background-color': slide.color }"
-    >
-      <ion-button
-        color="primary"
-        fill="clear"
-        expand="block"
-        (click)="goToHome()"
-        class="skip"
-        >Skip</ion-button
-      >
+    <ion-slide *ngFor="let slide of slides" [ngStyle]="{ 'background-color': slide.color }">
+      <ion-button color="primary" fill="clear" expand="block" (click)="goToHome()" class="skip">{{ "IntroPage.Skip" | translate}}</ion-button>
 
       <div class="intro-box">
         <img [src]="slide.image" class="pop-in slide-image" />
@@ -23,13 +13,9 @@
     <ion-slide [ngStyle]="{ 'background-color': 'black' }">
       <div class="intro-box">
         <img src="assets/icon/favicon.png" class="pop-in slide-image" /><br />
-        <ion-button
-          color="primary"
-          fill="outline"
-          expand="block"
-          (click)="goToHome()"
-          >Let's get started <ion-icon name="arrow-forward"></ion-icon
-        ></ion-button>
+        <ion-button color="primary" fill="outline" expand="block" (click)="goToHome()">{{ "IntroPage.Let" | translate}} <ion-icon
+            name="arrow-forward"></ion-icon>
+        </ion-button>
       </div>
     </ion-slide>
   </ion-slides>
